<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_char_type_default"
        android:entries="@array/settings_char_type_labels"
        android:entryValues="@array/settings_char_type_values"
        android:icon="@drawable/ic_transfer_within_a_station_black_24dp"
        android:key="@string/settings_char_type_key"
        android:title="@string/settings_char_type_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_limit_default"
        android:icon="@drawable/ic_reorder_black_24dp"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_default"
        android:entries="@array/settings_order_labels"
        android:entryValues="@array/settings_order_labels"
        android:icon="@drawable/ic_swap_vert_black_24dp"
        android:key="@string/settings_order_key"
        android:title="@string/settings_order_label" />

    <MultiSelectListPreference
        android:defaultValue="@array/setting_appearanace_def_values"
        android:dialogIcon="@drawable/ic_playlist_add_check_black_24dp"
        android:dialogTitle="@string/settings_appearance_label"
        android:entries="@array/setting_appearanace_labels"
        android:entryValues="@array/setting_appearanace_labels"
        android:icon="@drawable/ic_playlist_add_check_black_24dp"
        android:key="@string/settings_appearance_key"
        android:summary="Select Movies filters for characters"
        android:title="@string/settings_appearance_label" />

</PreferenceScreen>